--- a/Session 3/s3.ipynb
+++ b/Session 3/s3.ipynb
@@ -10,7 +10,7 @@
     "By the end of this notebook, we will:\n",
     "- Understand unsupervised learning and how it differs from supervised tasks\n",
     "- Apply Principal Component Analysis (PCA) for dimensionality reduction and visualization\n",
-    "- Try out other methods such us t-SNE and UMAP\n",
+    "- Try out other methods such as t-SNE and UMAP\n",
     "- Perform K-Means clustering to find patterns in unlabeled data\n",
     "- Interpret cluster assignments and compare them with true labels (if available)\n",
     "- Explore hierarchical clustering\n",
@@ -25,7 +25,7 @@
    "source": [
     "### Load the Breast Cancer dataset\n",
     "\n",
-    "We’ll ignore labels during clustering — but later compare clusters to the true diagnosis."
+    "We’ll ignore labels during clustering — but later we will compare clusters to the true diagnosis."
    ]
   },
   {
