--- a/Session 4/s4.ipynb
+++ b/Session 4/s4.ipynb
@@ -33,11 +33,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fa45bee3",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -45,11 +41,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5eded915",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -57,11 +49,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8d4a149f",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -69,11 +57,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "112d7932",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -81,11 +65,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "df3cd39a",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -93,18 +73,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b69a5fe6",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
